# CosyFromCynthia

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: cpp-supervisor.md  python-scripting-supervisor.md
CMakeModules/: FindSDD.cmake
benchmarks/sm1000/: results.csv
benchmarks/sm1000/bench1/: f1.ltlf  f10.ltlf  f100.ltlf  f101.ltlf  f101.part  f102.ltlf  f102.part  f103.ltlf  f103.part  f104.ltlf  f104.part  f105.ltlf  f106.ltlf  f106.part  f107.ltlf  f108.ltlf  f108.part  f109.ltlf  f109.part  f11.ltlf  f110.ltlf  f111.ltlf  f111.part  f112.ltlf  f113.ltlf  f114.ltlf  f114.part  f115.ltlf  f115.part  f116.ltlf  f116.part  f117.ltlf  f118.ltlf  f119.ltlf  f119.part  f12.ltlf  f120.ltlf  f121.ltlf  f122.ltlf  f122.part  (+652 more)
benchmarks/sm1000/bench2/: f1.ltlf  f1.part  f10.ltlf  f10.part  f100.ltlf  f100.part  f101.ltlf  f101.part  f102.ltlf  f103.ltlf  f103.part  f104.ltlf  f104.part  f105.ltlf  f105.part  f106.ltlf  f106.part  f107.ltlf  f108.ltlf  f109.ltlf  f11.ltlf  f11.part  f110.ltlf  f110.part  f111.ltlf  f111.part  f112.ltlf  f112.part  f113.ltlf  f114.ltlf  f114.part  f115.ltlf  f115.part  f116.ltlf  f117.ltlf  f117.part  f118.ltlf  f118.part  f119.ltlf  f12.ltlf  (+770 more)
libs/core/src/: vtree.cpp
libs/logic/: CMakeLists.txt
libs/parser/: CMakeLists.txt  fix_lexer_types.cmake
scripts/: verify-static-linking.sh
tools/benchmarks/: .gitignore  README.md
tools/benchmarks/sm1000_tester/: __init__.py  cli.py  models.py  runner.py  utils.py
tools/benchmarks/sm1000_tester/ui/: __init__.py  progress.py  report.py
