[project]
name = "sm1000-tester"
version = "0.1.0"
description = "Automated SMV 1000 benchmark testing and result comparison for Cynthia"
readme = "tools/benchmarks/README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
sm1000-test = "sm1000_tester:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/benchmarks/sm1000_tester"]

[dependency-groups]
dev = []
